--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,6 +1,6 @@
-// .el-sub-menu__title{
-//   font-size: var(--el-font-size-medium) !important;
-// }
-// .el-menu-item{
-//   font-size: var(--el-font-size-medium) !important;
-// }
+.el-form-item__label,
+.el-input__inner,
+.el-menu-item,
+.el-sub-menu__title {
+  font-size: var(--el-font-size-medium) !important;
+}
